--- a/sk.html
+++ b/sk.html
@@ -5342,6 +5342,51 @@ hJPQ PYTHAGORIAN
 [meta file_name=102726903-05-01-acc.pdf pdf_page=144 doc_page=142 type=main]
 [Page header: "IES BOO7 011"]
 
+ NLIST|
+NLISTTT&rarr;
+		CNLAST-NLIST
+ IPCONS-LIST+NLIST|
+		**INSTANCE - POINT
+C1&rarr;		NCONGENSP&equiv;(CN10-NLIST+1,,CONSTRAINTS+SPECB+1-LIST),(35,22,,37,30),(16,16,,0),43,1,2,2
+		[Macro expansion omitted]
+		**THING ON LINE
+C2&rarr;		NCONGENSP&equiv;(CONSTRAINTS+SPECB+1-LIST,,#-NLIST+MASBL),(35,30,,33,36),(16,16,,0),33,2,1,3
+		[Macro expansion omitted]
+
+<hr>
+[meta file_name=102726903-05-01-acc.pdf pdf_page=145 doc_page=143 type=main]
+[Page header: "IES BOO7 012"]
+
+		[Macro expansion (carried over from previous page) omitted]
+		**THING ON A CIRCLE
+C3&rarr;		NCONGEN&equiv;(41,31,,22,36),(16,16,,0),22,3,1,3
+		[Macro expanson omitted]
+		**VERTICAL THING
+C4&rarr;		NCONGEN&equiv;(41,45,,21,30),(14,12,,0),24,4,1,1
+		[Macro expanson omitted]
+
+<hr>
+[meta file_name=102726903-05-01-acc.pdf pdf_page=146 doc_page=144 type=main]
+[Page header: "IES BOO7 013"]
+
+		[Macro expansion (carried over from the previous page) omitted]
+		**HORIZ OR VERT LINE
+C5&rarr;		NCONGEN&equiv;(42,45,,36,27),(16,14,,0),27,5,1,2
+		[Macro expansion omitted]
+		**THING PARALLEL TO LINE
+C6&rarr;		NCONGEN&equiv;(33,43,,37,43),(16,16,,0),30,7,1,3
+		[Macro expansion omitted]
+		**MULTIPLE DISTANCE
+C7&rarr;		NCONGEN&equiv;(42,30,,23,34),(22,20,,0),34,10,1,4
+		[Macro expansion omitted]
+
+<hr>
+[meta file_name=102726903-05-01-acc.pdf pdf_page=147 doc_page=145 type=main]
+[Page header: "IES BOO7 013"]
+
+
+
+
 </code></pre></body></html>
 <html><body style='font-size:150%'><pre><code>
 <hr>
@@ -10686,5 +10731,50 @@ hJPQ PYTHAGORIAN
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=144 doc_page=142 type=main]
 [Page header: "IES BOO7 011"]
+
+ NLIST|
+NLISTTT&rarr;
+		CNLAST-NLIST
+ IPCONS-LIST+NLIST|
+		**INSTANCE - POINT
+C1&rarr;		NCONGENSP&equiv;(CN10-NLIST+1,,CONSTRAINTS+SPECB+1-LIST),(35,22,,37,30),(16,16,,0),43,1,2,2
+		[Macro expansion omitted]
+		**THING ON LINE
+C2&rarr;		NCONGENSP&equiv;(CONSTRAINTS+SPECB+1-LIST,,#-NLIST+MASBL),(35,30,,33,36),(16,16,,0),33,2,1,3
+		[Macro expansion omitted]
+
+<hr>
+[meta file_name=102726903-05-01-acc.pdf pdf_page=145 doc_page=143 type=main]
+[Page header: "IES BOO7 012"]
+
+		[Macro expansion (carried over from previous page) omitted]
+		**THING ON A CIRCLE
+C3&rarr;		NCONGEN&equiv;(41,31,,22,36),(16,16,,0),22,3,1,3
+		[Macro expanson omitted]
+		**VERTICAL THING
+C4&rarr;		NCONGEN&equiv;(41,45,,21,30),(14,12,,0),24,4,1,1
+		[Macro expanson omitted]
+
+<hr>
+[meta file_name=102726903-05-01-acc.pdf pdf_page=146 doc_page=144 type=main]
+[Page header: "IES BOO7 013"]
+
+		[Macro expansion (carried over from the previous page) omitted]
+		**HORIZ OR VERT LINE
+C5&rarr;		NCONGEN&equiv;(42,45,,36,27),(16,14,,0),27,5,1,2
+		[Macro expansion omitted]
+		**THING PARALLEL TO LINE
+C6&rarr;		NCONGEN&equiv;(33,43,,37,43),(16,16,,0),30,7,1,3
+		[Macro expansion omitted]
+		**MULTIPLE DISTANCE
+C7&rarr;		NCONGEN&equiv;(42,30,,23,34),(22,20,,0),34,10,1,4
+		[Macro expansion omitted]
+
+<hr>
+[meta file_name=102726903-05-01-acc.pdf pdf_page=147 doc_page=145 type=main]
+[Page header: "IES BOO7 013"]
+
+
+
 
 </code></pre></body></html>
