Correct the HMTL output.

--- a/sk.html
+++ b/sk.html
@@ -5346,6 +5346,12 @@ hJPQ PYTHAGORIAN
 NLISTTT&rarr;
 		CNLAST-NLIST
  IPCONS-LIST+NLIST|
+		[Listing below contains macro invocations, followed by their   ]
+                [expansions. The expansions are omitted from the transcription,]
+                [where indicated, since assembler should produce them from the ]
+                [macro definitions anyway. Long lines are broken down in the   ]
+                [listing using minus-before-carriage-return line continuation  ]
+                [trick, those are omitted from transcription as well.          ]
 		**INSTANCE - POINT
 C1&rarr;		NCONGENSP&equiv;(CN10-NLIST+1,,CONSTRAINTS+SPECB+1-LIST),(35,22,,37,30),(16,16,,0),43,1,2,2
 		[Macro expansion omitted]
@@ -5382,11 +5388,94 @@ C7&rarr;		NCONGEN&equiv;(42,30,,23,34),(22,20,,0),34,10,1,4
 
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=147 doc_page=145 type=main]
-[Page header: "IES BOO7 013"]
+[Page header: "IES BOO7 014"]
 
+		[Macro expansion (carried over from the previous page) omitted]
+		** MULTIPLE SIZE
+C8&rarr;		NCONGEN&equiv;(24,51,,30,42),(16,16,,0),42,11,1,2
+		[Macro expansion omitted]
+		**SCALER = DISTANCE
+C9&rarr;		NCONGEN&equiv;(30,23,,24,42),(16,16,,0),23,12,1,3
+		[Macro expansion omitted]
 
+<hr>
+[meta file_name=102726903-05-01-acc.pdf pdf_page=148 doc_page=146 type=main]
+[Page header: "IES BOO7 015"]
 
+		[Macro expansion (carried over from the previous page) omitted]
+		**SCALER = SIZE
+C10&rarr;		NCONGEN&equiv;(30,42,,24,42),(14,14,,0),21,13,1,2
+		[Macro expansion omitted]
+		**FULL SIZE INSTANCE
+C11&rarr;		NCONGEN&equiv;(33,33,,44,25),(12,12,,0),25,14,1,1
+		[Macro expansion omitted]
 
+<hr>
+[meta file_name=102726903-05-01-acc.pdf pdf_page=149 doc_page=147 type=main]
+[Page header: "IES BOO7 016"]
+
+		[Macro expansion (carried over from the previous page) omitted]
+		**MID POINT
+C12&rarr;		NCONGEN&equiv;(37,23,,30,34),(16,16,,0),47,20,2,3
+		[Macro expansion omitted]
+		**FOLD SIZE CONTROL
+C13&rarr;		NCONGEN&equiv;(22,42,,25,6),(14,12,,0),6,21,1,1
+		[Macro expansion omitted]
+
+<hr>
+[meta file_name=102726903-05-01-acc.pdf pdf_page=150 doc_page=148 type=main]
+[Page header: "IES BOO7 017"]
+
+		[Macro expansion (carried over from the previous page) omitted]
+		**POINTS NEXT NUMBER
+C14&rarr;		NCONGEN&equiv;(35,39,,20,37),(16,14,,0),36,23,2,2
+		[Macro expansion omitted]
+		**HOLD LENGTH
+C15&rarr;		NCONGEN&equiv;(23,23,,36,27),(16,14,,0),46,24,1,2
+		[Macro expansion omitted]
+
+<hr>
+[meta file_name=102726903-05-01-acc.pdf pdf_page=151 doc_page=149 type=main]
+[Page header: "IES BOO7 020"]
+
+		[Macro expansion (carried over from the previous page) omitted]
+		** # = FORCE
+C16&rarr;		NCONGEN&equiv;(24,22,,41,25),(20,16,,0),50,25,1,1
+		[Macro expansion omitted]
+		**PARPLLEL LINES [sic, typo in the listing]
+CN10&rarr;		NCONGENSP&equiv;(#-NLIST-MASBL,,C1-NLIST+1),(37,41,,36,37),(22,20,,0),37,6,1,4
+		[Macro expansion omitted]
+
+<hr>
+[meta file_name=102726903-05-01-acc.pdf pdf_page=152 doc_page=150 type=main]
+[Page header: "IES BOO7 021"]
+
+		[Macro expansion (carried over from the previous page) omitted]
+CNLAST&rarr;		0
+ CCFR-30|
+CCFR30&rarr;		0
+		0
+		0
+		hJMP FORCE
+		hJMP HOLDL
+		hJMP PNNU1
+		hJMP PNNU2
+		hJMP 6FSC
+CCFR20&rarr;		hJMP MIDP1
+		hJMP MIDP2
+DEGEN1&rarr;		<sup>1</sup>STE #+1
+		JPQ #
+CCFR14&rarr;		hJMP IBFSCOMP
+		hJMP SIZECOMP
+		hJMP DISTCOMP
+		hJMP MSCOMP
+CCFR10&rarr;		hJMP MDISCOMP
+		hJMP TPTLCOMP
+		hJMP PRLCOMP
+		hJMP IBVERTCOMP
+		hJMP ONCIRCCOMP
+CCFR2&rarr;		hJMP ONLINECOMP
+ ORIGIN|
 </code></pre></body></html>
 <html><body style='font-size:150%'><pre><code>
 <hr>
@@ -10736,6 +10825,12 @@ hJPQ PYTHAGORIAN
 NLISTTT&rarr;
 		CNLAST-NLIST
  IPCONS-LIST+NLIST|
+		[Listing below contains macro invocations, followed by their   ]
+                [expansions. The expansions are omitted from the transcription,]
+                [where indicated, since assembler should produce them from the ]
+                [macro definitions anyway. Long lines are broken down in the   ]
+                [listing using minus-before-carriage-return line continuation  ]
+                [trick, those are omitted from transcription as well.          ]
 		**INSTANCE - POINT
 C1&rarr;		NCONGENSP&equiv;(CN10-NLIST+1,,CONSTRAINTS+SPECB+1-LIST),(35,22,,37,30),(16,16,,0),43,1,2,2
 		[Macro expansion omitted]
@@ -10772,9 +10867,92 @@ C7&rarr;		NCONGEN&equiv;(42,30,,23,34),(22,20,,0),34,10,1,4
 
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=147 doc_page=145 type=main]
-[Page header: "IES BOO7 013"]
+[Page header: "IES BOO7 014"]
 
+		[Macro expansion (carried over from the previous page) omitted]
+		** MULTIPLE SIZE
+C8&rarr;		NCONGEN&equiv;(24,51,,30,42),(16,16,,0),42,11,1,2
+		[Macro expansion omitted]
+		**SCALER = DISTANCE
+C9&rarr;		NCONGEN&equiv;(30,23,,24,42),(16,16,,0),23,12,1,3
+		[Macro expansion omitted]
 
+<hr>
+[meta file_name=102726903-05-01-acc.pdf pdf_page=148 doc_page=146 type=main]
+[Page header: "IES BOO7 015"]
 
+		[Macro expansion (carried over from the previous page) omitted]
+		**SCALER = SIZE
+C10&rarr;		NCONGEN&equiv;(30,42,,24,42),(14,14,,0),21,13,1,2
+		[Macro expansion omitted]
+		**FULL SIZE INSTANCE
+C11&rarr;		NCONGEN&equiv;(33,33,,44,25),(12,12,,0),25,14,1,1
+		[Macro expansion omitted]
 
+<hr>
+[meta file_name=102726903-05-01-acc.pdf pdf_page=149 doc_page=147 type=main]
+[Page header: "IES BOO7 016"]
+
+		[Macro expansion (carried over from the previous page) omitted]
+		**MID POINT
+C12&rarr;		NCONGEN&equiv;(37,23,,30,34),(16,16,,0),47,20,2,3
+		[Macro expansion omitted]
+		**FOLD SIZE CONTROL
+C13&rarr;		NCONGEN&equiv;(22,42,,25,6),(14,12,,0),6,21,1,1
+		[Macro expansion omitted]
+
+<hr>
+[meta file_name=102726903-05-01-acc.pdf pdf_page=150 doc_page=148 type=main]
+[Page header: "IES BOO7 017"]
+
+		[Macro expansion (carried over from the previous page) omitted]
+		**POINTS NEXT NUMBER
+C14&rarr;		NCONGEN&equiv;(35,39,,20,37),(16,14,,0),36,23,2,2
+		[Macro expansion omitted]
+		**HOLD LENGTH
+C15&rarr;		NCONGEN&equiv;(23,23,,36,27),(16,14,,0),46,24,1,2
+		[Macro expansion omitted]
+
+<hr>
+[meta file_name=102726903-05-01-acc.pdf pdf_page=151 doc_page=149 type=main]
+[Page header: "IES BOO7 020"]
+
+		[Macro expansion (carried over from the previous page) omitted]
+		** # = FORCE
+C16&rarr;		NCONGEN&equiv;(24,22,,41,25),(20,16,,0),50,25,1,1
+		[Macro expansion omitted]
+		**PARPLLEL LINES [sic, typo in the listing]
+CN10&rarr;		NCONGENSP&equiv;(#-NLIST-MASBL,,C1-NLIST+1),(37,41,,36,37),(22,20,,0),37,6,1,4
+		[Macro expansion omitted]
+
+<hr>
+[meta file_name=102726903-05-01-acc.pdf pdf_page=152 doc_page=150 type=main]
+[Page header: "IES BOO7 021"]
+
+		[Macro expansion (carried over from the previous page) omitted]
+CNLAST&rarr;		0
+ CCFR-30|
+CCFR30&rarr;		0
+		0
+		0
+		hJMP FORCE
+		hJMP HOLDL
+		hJMP PNNU1
+		hJMP PNNU2
+		hJMP 6FSC
+CCFR20&rarr;		hJMP MIDP1
+		hJMP MIDP2
+DEGEN1&rarr;		<sup>1</sup>STE #+1
+		JPQ #
+CCFR14&rarr;		hJMP IBFSCOMP
+		hJMP SIZECOMP
+		hJMP DISTCOMP
+		hJMP MSCOMP
+CCFR10&rarr;		hJMP MDISCOMP
+		hJMP TPTLCOMP
+		hJMP PRLCOMP
+		hJMP IBVERTCOMP
+		hJMP ONCIRCCOMP
+CCFR2&rarr;		hJMP ONLINECOMP
+ ORIGIN|
 </code></pre></body></html>
